--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -152,7 +152,7 @@ aside {
 /*forms*/
 
 input, textarea, select, .uneditable-input {
-  border: 1px solid $brownishyellow;
+  border: 1px solid $gray-darker
   width: 100%;
   margin-bottom: 15px;
   @include box_sizing;
@@ -191,4 +191,17 @@ input {
 #session_remember_me {
   width: auto;
   margin-left: 0;
+}
+
+/*Users index*/
+
+.user {
+  list-style: none;
+  margin: 0;
+
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid $lightgrey;
+  }
 }
