--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <%= yield %>
   </body>
     <title><%= yield:title %> | Ruby on Rails Tutorial Sample App</title>
+    <title><%= yield :title %> | Ruby on Rails Tutorial Sample App</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
