--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -152,7 +152,7 @@ aside {
 /*forms*/
 
 input, textarea, select, .uneditable-input {
-  border: 1px solid $gray-darker
+  border: 1px solid $gray-darker;
   width: 100%;
   margin-bottom: 15px;
   @include box_sizing;
