--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <%= provide :title, "Home" %>
 
-<div class=>"center jumbotron"
+<div class="center jumbotron"
   <h1>Welcome to Sample App</h1>
 
   <h2>
