--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,27 +1,21 @@
+
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SampleApp</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
-    <%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>
-  </head>
-
-  <body>
-    <%= yield %>
-  </body>
-    <title><%= yield:title %> | Ruby on Rails Tutorial Sample App</title>
     <title><%= yield :title %> | Ruby on Rails Tutorial Sample App</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
     <%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>
-</head>
+    <%= render "layouts/shim" %>
+  </head>
 
-<body>
-  <%= yield %>
- </body>
+  <body>
+  <%= render "layouts/header" %>
+  <div class="container">
+    <%= yield %>
+    <%= render "layouts/footer" %>
+  </div>
+</body>
 </html>
