--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,15 @@
-<% provide :title, "Home | " %>
+<%= provide :title, "Home" %>
 
-<h1>Sample App</h1>
-  <p>
+<div class=>"center jumbotron"
+  <h1>Welcome to Sample App</h1>
+
+  <h2>
     This is the home page for the
-    <%= link_to "Ruby on Rails Tutorial Home Page", Settings.links.rails_tutorial.home_page %>
-  </p> 
+    <%= link_to "Ruby on Rails Tutorial", Settings.links.rails_tutorial.home_page %>
+    sample application.
+  <h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200px"),"https://rubyonrails.org/" %>
