--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -21,7 +21,7 @@
     <% end %>
     <div class="gravatar_edit">
       <%= gravatar_for @user %>
-      <% link_to "change", Settings.links.rails_tutorial.gravatar , target:"_blank" %>
+      <%= link_to "change", Settings.links.rails_tutorial.gravatar , target:"_blank" %>
     </div>
   </div>
 </div>
