--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for @user do |f| %>
-      <%= render "shared/error_messages" %>
+      <%= render "shared/error_messages", object: f.object %>
 
       <%= f.label :name %>
       <%= f.text_field :name, class: "form-control" %>
@@ -21,7 +21,7 @@
     <% end %>
     <div class="gravatar_edit">
       <%= gravatar_for @user %>
-      <% link_to "change", Settings.links.rails_tutorial.gravatar , target:"_blank" %>
+      <%= link_to "change", Settings.links.rails_tutorial.gravatar , target:"_blank" %>
     </div>
   </div>
 </div>
